# scopeguard-lite

./: Cargo.toml  README.md
src/: lib.rs
tests/: basic.rs  chaos.rs  control_flow.rs  defuse.rs  future.rs
tests/util/: mod.rs
