[package]
name = "scopeguard-lite"
version = "1.0.0"
edition = "2021"
rust-version = "1.61"
authors = ["Sky <sky@sky9.dev>"]
keywords = ["defer", "unwind", "guard", "panic", "scope"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
repository = "https://github.com/Sky9x/scopeguard-lite"
license = "MIT OR Apache-2.0"
description = "A lightweight way to defer execution of a block to the end of the scope, and to run code during an unwind."
